src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_tooltip_popup_positioning.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                 ┌ fn: map ────────────────────── Ctrl+T to dismiss ┐ │"
"│                                                                 │Apply expression to each element of an array      │ │"
"│                                                                 │                                                  │ │"
"│                                                                 │  map(.name)           │ extract field from each  │ │"
"│                                                                 │  map(. + 1)           │ increment each number    │ │"
"│                                                                 │  map(select(.active)) │ filter to active items   │ │"
"│                                                                 │  map({id, name})      │ reshape each object      │ │"
"│                                                                 │                                                  │ │"
"│                                                                 │💡 Use [.[] | expr] for same result - less memory │ │" Hidden by multi-width symbols: [(68, " ")]
"│                                                                 │   for large arrays                               │ │"
"└─────────────────────────────────────────────────────────────────└──────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History                                        "
