src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_tooltip_popup_without_tip.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                        ┌ fn: del ─────────────────────────────── Ctrl+T to dismiss ┐ │"
"│                                                        │Delete keys or paths from object/array                     │ │"
"│                                                        │                                                           │ │"
"│                                                        │  del(.password, .secret) │ remove sensitive fields        │ │"
"│                                                        │  del(.users[0])          │ remove first array element     │ │"
"│                                                        │  del(.config.debug)      │ remove nested field            │ │"
"│                                                        │  map(del(.internal))     │ remove field from all objects  │ │"
"│                                                        │                                                           │ │"
"│                                                        │💡 For pattern matching: with_entries(select(.key |        │ │" Hidden by multi-width symbols: [(59, " ")]
"│                                                        │   test("x") | not))                                       │ │"
"└────────────────────────────────────────────────────────└───────────────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History                                        "
