src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_ui_small_terminal.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────┐"
"│{                                     │"
"│  "name": "Alice"                     │"
"│}                                     │"
"│                                      │"
"└──────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────┐"
"│                                      │"
"└──────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctr"
